# open-sztp

./: BUILD.bazel  MODULE.bazel  README.md  add_new_device.sh  go.mod  go.sum  main.go  server.go
data/: ownershipCertificate.pem
data/67890/: bootstrapConfig.txt  onboardingData.json  verifyAttestationCredentialResponse.textproto
handlers/: BUILD.bazel  bootstrap_data.go  issue_aik_cert.go  report_progress.go  verify_attestation_credential.go
proto/: BUILD.bazel  tpm_enrollment.proto
testdata/: BUILD.bazel  issueAikCertResponse.textproto  ownershipCertificate.pem  ownershipCertificatePrivateKey.pem  ownershipVoucher.base64  postConfigScript.txt  preConfigScript.txt  testdata.go  testdata_test.go  trustAnchorCertificate.pem
util/: BUILD.bazel  constants.go  data_reader.go  data_reader_test.go  parser.go  parser_test.go  stub_dependency_provider.go
util/testdata/: ownershipCertificatePrivateKey.pem  trustAnchorCertificatePrivateKey.pem
