# Copyright 2024 Google LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Golang HTTP server that implements sZTP (RFC 8572) + TPM enrollment/attestation.
package(default_visibility = [
    "//visibility:public",
])

exports_files(["LICENSE"])

gazelle(name = "gazelle")

go_library(
    name = "server",
    importpath = "github.com/google/open_sztp/server",
    srcs = ["server.go"],
    deps = [
        "//handlers:bootstrapdata",
        "//handlers:issueaikcert",
        "//handlers:reportprogress",
        "//handlers:verifyattestationcredential",
        "//util:constants",
        "//util:parser",
    ],
)

go_binary(
    name = "main",
    srcs = ["main.go"],
    data = glob(["data/**"]),
    deps = [
        ":server",
        "//util:data",
        "//util:stubdependencies",
    ],
)
