# Copyright 2024 Google LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//tools/build_defs/go:go_library.bzl", "go_library")
load("//tools/build_defs/go:go_test.bzl", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "testdata",
    importpath = "github.com/google/open_sztp/testdata/testdata",
    srcs = ["testdata.go"],
    embedsrcs = [
        "bootstrapConfig.txt",
        "issueAikCertResponse.textproto",
        "ownershipCertificate.pem",
        "ownershipCertificatePrivateKey.pem",
        "ownershipVoucher.base64",
        "postConfigScript.txt",
        "preConfigScript.txt",
        "trustAnchorCertificate.pem",
        "trustAnchorCertificatePrivateKey.pem",
        "verifyAttestationCredentialResponse.textproto",
    ],
    deps = [
        "//proto:tpm_enrollment_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_test(
    name = "testdata_test",
    srcs = ["testdata_test.go"],
    embed = [":testdata"],
    deps = ["@org_mozilla_go_pkcs7//:pkcs7"],
)
