# Copyright 2024 Google LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "parser",
    importpath = "github.com/google/open_sztp/util/parser",
    srcs = ["parser.go"],
    deps = [":constants"],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
    deps = [
        ":constants",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)

go_library(
    name = "constants",
    importpath = "github.com/google/open_sztp/util/constants",
    srcs = ["constants.go"],
)

go_library(
    name = "stubdependencies",
    importpath = "github.com/google/open_sztp/util/stubdependencies",
    srcs = ["stub_dependency_provider.go"],
    deps = [
        ":data",
        ":parser",
        "//handlers:bootstrapdata",
        "//proto:tpm_enrollment_go_proto",
        "@org_golang_x_sys//unix",
    ],
)

go_library(
    name = "data",
    importpath = "github.com/google/open_sztp/util/data",
    srcs = ["data_reader.go"],
    deps = [
        "//handlers:bootstrapdata",
        "//proto:tpm_enrollment_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
        "@rules_go//go/runfiles",
    ],
)

go_test(
    name = "data_test",
    srcs = ["data_reader_test.go"],
    data = [":testdata"],
    embed = [":data"],
    deps = [
        "//handlers:bootstrapdata",
        "@com_github_google_go_cmp//cmp",
        "@org_mozilla_go_pkcs7//:pkcs7",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
)
